--- a/package.json
+++ b/package.json
@@ -40,27 +40,11 @@
     "webpack-hot-middleware": "^2.21.0"
   },
   "dependencies": {
-    "apollo-cache-inmemory": "^1.1.5",
-    "apollo-client": "^2.2.0",
-    "apollo-link-http": "^1.3.2",
-    "apollo-link-ws": "^1.0.4",
-    "asyncawait": "^1.0.6",
-    "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "graphql": "^0.12.3",
-    "graphql-server-express": "^1.3.2",
-    "graphql-subscriptions": "^0.5.6",
-    "graphql-tag": "^2.6.1",
-    "graphql-tools": "^2.19.0",
-    "js-cookie": "^2.2.0",
-    "nedb-promise": "^2.0.1",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
-    "react-apollo": "^2.0.4",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^4.0.0-beta.17",
-    "react-router": "^4.2.0",
-    "shortid": "^2.2.8",
-    "subscriptions-transport-ws": "^0.9.5"
+    "react-router": "^4.2.0"
   }
 }
