--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^4.0.0-beta.17",
-    "react-router": "^4.2.0"
+    "react-router": "^4.2.0",
+    "react-scroll-parallax": "^1.2.1"
   }
 }
