--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
   "presets": ["react", "es2015", "stage-1"],
-  "plugins": ["transform-class-properties", "react-hot-loader/babel"]
+  "plugins": ["transform-class-properties"]
 }
