--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "webpack": "rimraf dist && webpack --colors --watch",
-    "start-dev": "NODE_ENV=development node ./server.js",
+    "dev": "webpack-dev-server --watch --colors",
     "build": "rimraf dist && NODE_ENV=production webpack --colors",
     "start": "NODE_ENV=production PORT=8080 pm2 start ./server.js",
     "lint": "eslint src webpack"
@@ -36,8 +35,7 @@
     "style-loader": "^0.19.1",
     "url-loader": "^0.6.2",
     "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.11.1",
-    "webpack-hot-middleware": "^2.21.0"
+    "webpack-dev-server": "^2.11.1"
   },
   "dependencies": {
     "express": "^4.16.2",
